Expanded Navigation, fixed inconsistent stylings. Wrapped customer display in container that is in line with amterial design UI

--- a/client/src/components/styles/BeerDisplay.module.css
+++ b/client/src/components/styles/BeerDisplay.module.css
@@ -2,14 +2,13 @@
   min-width: 550px;
   height: auto;
   margin: 5rem;
+  margin-top: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   border-radius: 1rem;
-  /* border: 3px solid black; */
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-
 }
 .DisplayContainer h1 {
   width: 100%;
