--- a/client/src/pages/styles/Navigation.module.css
+++ b/client/src/pages/styles/Navigation.module.css
@@ -1,11 +1,11 @@
-.container {
+.navbar {
+  position: fixed;
   background: black;
-  height: 3rem;
+  height: 5rem;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
   padding: 0;
-  position: sticky;
   top: 0;
   width: 100%;
   z-index: 1000;
@@ -34,7 +34,6 @@
   background: none;
   color: white;
   border: none;
-  border-radius: 0.5rem;
   font-size: 1.5rem;
   transition: 0.25s;
   cursor: pointer;
@@ -51,4 +50,7 @@ i {
   margin-right: 1rem;
   font-size: 1.5rem;
   align-self: center;
+}
+.Logout {
+  
 }
