--- a/client/src/pages/styles/Search.module.css
+++ b/client/src/pages/styles/Search.module.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   justify-content: center;
   margin: 5rem;
+  margin-top: 10rem;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  border-radius: 0.5rem;
+  padding: 5rem;
 }
 .Label {
   /* margin: 5rem 0 1rem 5rem; */
